2004-04-05  Paolo Borelli  <pborelli@katamail.com>

	* all plugins: use the same style in plugins descriptions.

2004-04-05  Paolo Borelli  <pborelli@katamail.com>

	* changecase/* : add a change case plugin.

2004-03-27  Paolo Borelli  <pborelli@katamail.com>

	* indent/indent.c (indent_cb): do not indent empty lines.

2004-03-27  Paolo Maggi  <paolo.maggi@polito.it>

	* taglist/gedit-taglist-plugin-window.c (taglist_window_show):
	sets the window type to UTILITY (patch by Rob Adams
	<readams@hmc.edu>)

2004-03-09  Paolo Maggi  <paolo.maggi@polito.it>

	* docinfo/Makefile.am:
	* indent/Makefile.am:
	* sample/Makefile.am:
	* shell_output/Makefile.am:
	* sort/Makefile.am:
	* spell/Makefile.am:
	* taglist/Makefile.am:
	* time/Makefile.am: added $(plugin_DATA) to CLEANFILES

2004-03-05  Paolo Maggi  <paolo.maggi@polito.it>

	Fixes bug #104950 (Right-click unselects text if you click 
	outside the selection)

	* spell/gedit-automatic-spell-checker.c (check_range)
	(get_word_extents_from_mark) (add_to_dictionary) (ignore_all)
	(replace_word) (populate_popup) (button_press_event)
	(gedit_automatic_spell_checker_new)
	(gedit_automatic_spell_checker_attach_view): Change behavior on a 
	right click so that cutting/copying with the mouse works again.
	Patch by Nathan Fredrickson <nathan@silverorange.com> backported 
	from gtkspell 2.5.0

2004-03-05  Albert Chin-A-Young  <china@thewrittenword.com>

	* time/Makefile.am:
	* spell/Makefile.am:
	* taglist/Makefile.am:
	* sort/Makefile.am:
	* docinfo/Makefile.am:
	* indent/Makefile.am: 
	* sample/Makefile.am:
	* shell_output/Makefile.am:
        Forgot to add some files from po/POTFILES.in into distribution

2004-03-03 Thomas Voß	<tommy_vossy@web.de>

	* spell/gedit-automatic-spell-checker.c(tag_highlight): Use 
	PANGO_UNDERLINE_ERROR, remove red color from highlighted text.

2004-02-24  Paolo Maggi  <paolo.maggi@polito.it> 

	[ gedit 2.5.90 released ]

2004-02-24  Paolo Maggi  <paolo.maggi@polito.it>
