@@ -49,7 +49,6 @@ plugin_DATA = $(plugin_in_files:.gedit-plugin.desktop.in=.gedit-plugin)
 EXTRA_DIST = 					\
 	$(glade_DATA)				\
 	$(plugin_in_files)			\
-	$(plugin_DATA)				\
 	gedit-spell-checker-dialog-marshal.list 
 
 CLEANFILES = $(BUILT_SOURCES) $(plugin_DATA)
