@@ -1,6 +1,7 @@
 2004-04-05  Paolo Borelli  <pborelli@katamail.com>
 
 	* all plugins: use the same style in plugins descriptions.
+	* all plugins: do not distribute generated desktop file.
 
 2004-04-05  Paolo Borelli  <pborelli@katamail.com>
 
